@@ -73,6 +73,9 @@ o [Windows] Add support for the new loopback behavior in Npcap 0.9983. This
   Adapter to be installed, which was a source of problems for some users.
   [Daniel Miller]
 
+o [NSE] MS SQL library has improved version resolution, from service pack level
+  to individual cumulative updates [nnposter]
+
 o [NSE][GH#2077] With increased verbosity, script http-default-accounts now
   reports matched target fingerprints even if no default credentials were found
   [nnposter]
